<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darker_grey"
    android:gravity="center_horizontal|center_vertical">

    <TextView
        android:id="@+id/brightness"
        android:layout_width="@dimen/layout_width_camera_text_view"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"
        android:text="@string/camera_brightness"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_camera_setting" />

    <SeekBar
        android:id="@+id/sbBrightness"
        style="@style/CameraSettingsSeekBarTheme"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/brightness" />

    <TextView
        android:id="@+id/contrast"
        android:layout_width="@dimen/layout_width_camera_text_view"
        android:layout_height="wrap_content"
        android:layout_below="@+id/brightness"
        android:gravity="end"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"
        android:text="@string/camera_contrast"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_camera_setting" />

    <SeekBar
        android:id="@+id/sbContrast"
        style="@style/CameraSettingsSeekBarTheme"
        android:layout_height="wrap_content"
        android:layout_below="@+id/brightness"
        android:layout_toRightOf="@id/contrast" />

    <TextView
        android:id="@+id/saturation"
        android:layout_width="@dimen/layout_width_camera_text_view"
        android:layout_height="wrap_content"
        android:layout_below="@+id/contrast"
        android:gravity="end"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"
        android:text="@string/camera_saturation"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_camera_setting" />

    <SeekBar
        android:id="@+id/sbSaturation"
        style="@style/CameraSettingsSeekBarTheme"
        android:layout_height="wrap_content"
        android:layout_below="@+id/contrast"
        android:layout_toRightOf="@id/saturation" />

    <TextView
        android:id="@+id/temperature"
        android:layout_width="@dimen/layout_width_camera_text_view"
        android:layout_height="wrap_content"
        android:layout_below="@id/saturation"
        android:gravity="end"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"
        android:text="@string/camera_temperature"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_camera_setting" />

    <SeekBar
        android:id="@+id/sbTemperature"
        style="@style/CameraSettingsSeekBarTheme"
        android:layout_height="wrap_content"
        android:layout_below="@+id/saturation"
        android:layout_toRightOf="@id/temperature" />

    <TextView
        android:id="@+id/exposure"
        android:layout_width="@dimen/layout_width_camera_text_view"
        android:layout_height="wrap_content"
        android:layout_below="@+id/temperature"
        android:gravity="end"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"
        android:text="@string/camera_exposure"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_camera_setting" />

    <SeekBar
        android:id="@+id/sbExposure"
        style="@style/CameraSettingsSeekBarTheme"
        android:layout_height="wrap_content"
        android:layout_below="@+id/temperature"
        android:layout_toRightOf="@id/exposure" />

</RelativeLayout>