<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <!--<com.example.john.layoutanimation.ShitBar-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content" />-->

    <ImageView
        android:id="@+id/ivImage"
        android:layout_width="match_parent"
        android:layout_height="300dp" />

    <LinearLayout
        android:id="@+id/rlCameraMainTools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#bbbbbb"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_world"
            android:textColor="@android:color/white"
            android:textSize="28sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_world"
            android:textColor="@android:color/white"
            android:textSize="28sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_world"
            android:textColor="@android:color/white"
            android:textSize="28sp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rlCameraEditingTools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/rlCameraMainTools"
        android:background="#F8F8F8">

        <ImageView
            android:id="@+id/ivCrop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:background="@drawable/camera_crop_selector" />

        <ImageView
            android:id="@+id/ivFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="55dp"
            android:layout_toRightOf="@+id/ivCrop"
            android:background="@drawable/camera_filter_selector" />

        <ImageView
            android:id="@+id/ivFrame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:background="@drawable/camera_frame_selector" />

        <ImageView
            android:id="@+id/ivSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="55dp"
            android:layout_toLeftOf="@+id/ivFrame"
            android:background="@drawable/camera_setting_selector" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/llToolDisplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/llCameraNavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:visibility="gone">

        <Button
            android:id="@+id/bCameraNavigationBackReset"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#000000"
            android:text="@string/camera_navigation_back"
            android:textColor="@drawable/camera_navigation_reset_selector"
            android:textSize="12sp" />

        <Button
            android:id="@+id/bCameraNavigationNext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#000000"
            android:text="@string/camera_navigation_next"
            android:textColor="@drawable/camera_navigation_next_selector"
            android:textSize="12sp" />
    </LinearLayout>
</RelativeLayout>
